--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
 
     <title>Gallifreyan translator</title>
+	<meta name="description" content="An open-source Gallifreyan translator">
 	
 	<link href="style.css" rel="stylesheet">
 
@@ -10,7 +11,7 @@
 
   <body>
 	<div id="textfield-container">
-		<h3>A (incomplete) Gallifreyan translator</h3>
+		<h3>An (incomplete) Gallifreyan translator</h3>
 		<input></input>
 		<button type="button" onclick="updateText(); return false;">Update</button>
 	</div>
@@ -25,7 +26,7 @@
 	<p style="font-size:10px">Created by Adrian Wielgosik</p>
 
 	<!-- Google Analytics stuff -->
-	<!--<script type="text/javascript">
+	<script type="text/javascript">
 
 	  var _gaq = _gaq || [];
 	  _gaq.push(['_setAccount', 'UA-45606982-1']);
@@ -37,6 +38,6 @@
 		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 	  })();
 
-	</script>-->
+	</script>
   </body>
 </html>
