Separated buttons into a separate file

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	</div>
 	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 	<script src="jquery-mousewheel/jquery.mousewheel.js"></script>
+	<script src="gui.js"></script>
 	<script src="gallifreyan.js"></script>
 
 	<p>Want to help? Make a pull request on <a href="https://github.com/adrian17/Gallifreyan">GitHub</a></p>
