Updated README, CSS and added a GitHub banner

--- a/index.html
+++ b/index.html
@@ -11,21 +11,25 @@
 
   <body>
 	<div id="textfield-container">
-		<h3>An (incomplete) Gallifreyan translator</h3>
+		<h3>A Gallifreyan translator</h3>
 		<input></input>
 		<button type="button" onclick="updateText(); return false;">Update</button>
 	</div>
 	<div id="canvas-container">
 		<canvas id="canvas" width="500" height="500">Your browser doesn't support canvas</canvas>
 	</div>
+
+	<p style="font-size:10px">Created by Adrian Wielgosik</p>
+	
+	<a href="https://github.com/adrian17/Gallifreyan">
+		<img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub">
+	</a>
+	
 	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 	<script src="jquery-mousewheel/jquery.mousewheel.js"></script>
 	<script src="gui.js"></script>
 	<script src="intersection.js"></script>
 	<script src="gallifreyan.js"></script>
-
-	<p>Want to help? Make a pull request on <a href="https://github.com/adrian17/Gallifreyan">GitHub</a></p>
-	<p style="font-size:10px">Created by Adrian Wielgosik</p>
 
 	<!-- Google Analytics stuff -->
 	<script type="text/javascript">
