Implemented zooming, using Zynga Scroller

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<button type="button" onclick="updateText(); return false;">Update</button>
 	</div>
 	<div id="canvas-container">
-		<canvas id="canvas" width="500" height="500">Your browser doesn't support canvas</canvas>
+		<canvas id="canvas">Your browser doesn't support canvas</canvas>
 	</div>
 
 	<p style="font-size:10px">Created by Adrian Wielgosik</p>
@@ -29,6 +29,8 @@
 	<script src="jquery-mousewheel/jquery.mousewheel.js"></script>
 	<script src="gui.js"></script>
 	<script src="intersection.js"></script>
+	<script src="scroller/src/Scroller.js"></script>
+	<script src="canvasUtils.js"></script>
 	<script src="gallifreyan.js"></script>
 
 	<!-- Google Analytics stuff -->
