--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
     <title>Gallifreyan translator</title>
     <meta name="description" content="An open-source Gallifreyan translator">
+    <meta charset="UTF-8">
     
     <link href="style.css" rel="stylesheet">
 
