Support SVG saving

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
       crossorigin="anonymous"></script>
     <script src="jquery-mousewheel/jquery.mousewheel.js"></script>
+    <script src="canvas2svg/canvas2svg.js"></script>
     <script src="gui.js"></script>
     <script src="intersection.js"></script>
     <script src="scroller/src/Scroller.js"></script>
